--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,3 +1,4 @@
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/bootstrap";
-@import "./helpers/login.scss";
+@import "./helpers/_navbar.scss";
+@import "./helpers/app.scss";
