--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,4 +1,5 @@
 @import "~bootstrap/scss/functions";
+@import "./helpers/_variables.scss";
 @import "~bootstrap/scss/bootstrap";
 @import "./helpers/_navbar.scss";
 
