--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,5 +1,6 @@
 @import "~bootstrap/scss/functions";
-@import "./helpers/_variables.scss";
 @import "~bootstrap/scss/bootstrap";
+@import "~bootstrap-icons/font/bootstrap-icons.css";
+@import "./helpers/_variables.scss";
 @import "./helpers/_navbar.scss";
 
