--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -2,4 +2,6 @@
 @import "~bootstrap/scss/bootstrap";
 @import "./helpers/_variables.scss";
 @import "./helpers/_navbar.scss";
+@import "./helpers/_nav.scss";
+@import "./helpers/_App_vue.scss";
 
