--- a/src/assets/helpers/_dashboard.scss
+++ b/src/assets/helpers/_dashboard.scss
@@ -2,10 +2,10 @@ body {
   font-size: .875rem;
 }
 
-.feather {
-  width: 16px;
-  height: 16px;
-  vertical-align: text-bottom;
+.wrapper {
+  display: flex;
+  flex-grow: 1;
+  overflow: hidden;
 }
 
 /*
@@ -13,19 +13,10 @@ body {
  */
 
 .sidebar {
-  position: fixed;
-  top: 0;
-  /* rtl:raw:
-  right: 0;
-  */
-  bottom: 0;
-  /* rtl:remove */
-  left: 0;
-  z-index: 100;
-  /* Behind the navbar */
-  padding: 48px 0 0;
-  /* Height of navbar */
+  flex-basis: 240px;
+  overflow: auto;
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+  flex-shrink: 0;
 }
 
 @media (max-width: 767.98px) {
@@ -41,7 +32,6 @@ body {
   padding-top: .5rem;
   overflow-x: hidden;
   overflow-y: auto;
-  /* Scrollable contents if viewport is shorter than content. */
 }
 
 .sidebar .nav-link {
