--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -3,5 +3,5 @@
 @import "./helpers/_variables.scss";
 @import "./helpers/_navbar.scss";
 @import "./helpers/_nav.scss";
-@import "./helpers/_App_vue.scss";
+@import "./custom/_AppVue.scss";
 
