--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -4,4 +4,5 @@
 @import "./helpers/_navbar.scss";
 @import "./helpers/_nav.scss";
 @import "./custom/_AppVue.scss";
+@import "./custom/_Accommodation.scss";
 
